# R-Type

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Project.cbp  R-Type.cbp  R-Type.sln  R-Type_Server  README.md  R_Type  R_Type.cbp  cmake_install.cmake  conanfile.txt  conaninfo.txt  install_conan_remote.sh  launchServer.sh  monsters  setup.sh
.../: CMakeDirectoryInformation.cmake  Makefile.cmake  Makefile2  TargetDirectories.txt
.../R_Type.dir/: CXX.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  flags.make  link.txt
lib/: libboost_iostreams.so.1.67.0
src/client/: CMakeLists.txt  Makefile  R-Type_Client.vcxproj  R-Type_Client.vcxproj.filters  lunch.sh  sfml-app
src/client/source/: main.cpp
src/client/source/include/: Client.hpp  Command.hpp  RType.hpp  RequestManager.hpp  ScopeLock.hpp  UDPClient.cpp  UDPClient.hpp
src/client/source/includes/: client.hpp
src/client/source/lib/: Animation.cpp  Animation.hpp  Auth.cpp  Auth.hpp  Bullet.cpp  Bullet.hpp  Connection.cpp  Connection.hpp  CreateRoom.cpp  CreateRoom.hpp  Game.cpp  Game.hpp  JoinRoom.cpp  JoinRoom.hpp  Map.cpp  Map.hpp  Menu.cpp  Menu.hpp  Mob.cpp  Mob.hpp  RType.cpp  RType.hpp  Room.cpp  Room.hpp  Starship.cpp  Starship.hpp  UDPGame.hpp  UI.cpp  UI.hpp  utils.cpp
src/server/: CMakeLists.txt  R-Type_Server.vcxproj  R-Type_Server.vcxproj.filters  compile.sh  compileOSX.sh  main.cpp  monsters  server
src/server/include/: Command.hpp  Entities.hpp  Game.hpp  Message.hpp  Parser.hpp  Participant.hpp  Room.hpp  Server.hpp  Session.hpp  UDPGame.hpp  UDPServer.hpp
src/server/includeOSX/boost/test/impl/: compiler_log_formatter.ipp
src/server/includes/: sockets.hpp  thread.hpp
src/server/libOSX/: libboost_atomic-mt.dylib  libboost_chrono-mt.dylib  libboost_chrono.dylib  libboost_container-mt.dylib  libboost_container.dylib  libboost_context-mt.dylib  libboost_contract-mt.dylib  libboost_contract.dylib  libboost_coroutine-mt.dylib  libboost_coroutine.dylib  libboost_date_time-mt.dylib  libboost_date_time.dylib  libboost_fiber-mt.dylib  libboost_filesystem-mt.dylib  libboost_filesystem.dylib  libboost_graph-mt.dylib  libboost_graph.dylib  libboost_iostreams-mt.dylib  libboost_iostreams.dylib  libboost_locale-mt.dylib  libboost_log-mt.dylib  libboost_log.dylib  libboost_log_setup-mt.dylib  libboost_log_setup.dylib  libboost_math_c99-mt.dylib  libboost_math_c99.dylib  libboost_math_c99f-mt.dylib  libboost_math_c99f.dylib  libboost_math_c99l-mt.dylib  libboost_math_c99l.dylib  libboost_math_tr1-mt.dylib  libboost_math_tr1.dylib  libboost_math_tr1f-mt.dylib  libboost_math_tr1f.dylib  libboost_math_tr1l-mt.dylib  libboost_math_tr1l.dylib  libboost_prg_exec_monitor-mt.dylib  libboost_prg_exec_monitor.dylib  libboost_program_options-mt.dylib  libboost_program_options.dylib  (+25 more)
src/server/sockets/: sockets.cpp
src/server/src/: Entities.cpp  Game.cpp  GameCommands.cpp  Parser.cpp  Participant.cpp  PreGameCommands.cpp  Room.cpp  Server.cpp  Session.cpp  UDPGame.cpp  UDPServer.cpp  main.cpp
src/server/thread/: thread.cpp
src/test/: chat_client.cpp  chat_message.hpp  chat_server.cpp  client  compile_client.sh  compile_server.sh
